--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
         <!-- Left Section -->
         <div class="w-1/2 bg-gray-50 flex flex-col justify-center items-center p-8">
             <div class="flex flex-col items-center">
-                <h1 class="text-4xl font-bold">Deam <span class="text-yellow-400">Home</span></h1>
+                <h1 class="text-4xl font-bold">Dream <span class="text-yellow-400">Home</span></h1>
                 <p class="text-sm font-medium text-gray-500">Solution</p>
             </div>
             <div class="relative mt-5">
