--- a/login.html
+++ b/login.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100">
     <div class="flex min-h-screen border border-gray-300 rounded-lg">
         <!-- Left Section -->
@@ -15,12 +17,13 @@
                 <p class="text-sm font-medium text-gray-500">Solution</p>
             </div>
             <div class="relative mt-5">
-                <img src="https://townsquare.media/site/385/files/2023/06/attachment-RS49827_GettyImages-1165800492-scr.jpg?w=1600&q=75" alt="Person" class="rounded-full shadow-lg">
-                <!-- Example for connected people -->
-                
+                <img src="https://townsquare.media/site/385/files/2023/06/attachment-RS49827_GettyImages-1165800492-scr.jpg?w=1600&q=75"
+                    alt="Person" class="rounded-full shadow-lg">
+
             </div>
             <p class="mt-5 text-2xl font-semibold text-center">Change your address,
-                <br>experience a new adventure.</p>
+                <br>experience a new adventure.
+            </p>
         </div>
 
         <!-- Right Section -->
@@ -30,29 +33,43 @@
                 <form class="space-y-4">
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                        <input type="email" id="email" placeholder="example@gmail.com" class="w-full border border-gray-300 rounded-full px-4 py-2 mt-1 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
+                        <input type="email" id="email" placeholder="example@gmail.com"
+                            class="w-full border border-gray-300 rounded-full px-4 py-2 mt-1 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
                     </div>
                     <div>
                         <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
                         <div class="relative">
-                            <input type="password" id="password" placeholder="Password" class="w-full border border-gray-300 rounded-full px-4 py-2 mt-1 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
+                            <input type="password" id="password" placeholder="Password"
+                                class="w-full border border-gray-300 rounded-full px-4 py-2 mt-1 focus:ring-2 focus:ring-yellow-400 focus:outline-none">
                             <span class="absolute right-4 top-2/4 -translate-y-2/4 text-gray-400 cursor-pointer">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M13.875 18.825A10.05 10.05 0 0019.95 12c-.035-3.85-2.5-7.125-6.075-8.55m2.325 8.55A6 6 0 116 12a6 6 0 0111.625-1.125" />
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M13.875 18.825A10.05 10.05 0 0019.95 12c-.035-3.85-2.5-7.125-6.075-8.55m2.325 8.55A6 6 0 116 12a6 6 0 0111.625-1.125" />
                                 </svg>
                             </span>
                         </div>
                     </div>
                     <div class="flex justify-between items-center">
-                        <a href="dashboard.html" class="text-sm text-gray-600 hover:underline">Forgot Password?</a>
+                        <a href="#" class="text-sm text-gray-600 hover:underline">Forgot Password?</a>
                     </div>
-                    <button type="submit" class="w-full bg-black text-yellow-400 py-2 rounded-full text-sm font-medium hover:bg-gray-800">Sign In</button>
+                    <button type="submit"
+                        class="w-full bg-black text-yellow-400 py-2 rounded-full text-sm font-medium hover:bg-gray-800">Sign
+                        In</button>
+                    <div class="flex justify-between items-center">
+                        <a href="dashboard.html" class="text-sm text-gray-600 hover:underline">sing in as user</a>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <a href="admindash.html" class="text-sm text-gray-600 hover:underline">sing in as admin</a>
+                    </div>
                 </form>
                 <div class="mt-6 text-center">
-                    <p class="text-sm text-gray-600">Don’t have an account yet? <a href="#" class="font-medium text-black hover:underline">Register</a></p>
+                    <p class="text-sm text-gray-600">Don’t have an account yet? <a href="#"
+                            class="font-medium text-black hover:underline">Register</a></p>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
