--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
                         class="w-full bg-black text-yellow-400 py-2 rounded-full text-sm font-medium hover:bg-gray-800">Sign
                         In</button>
                     <div class="flex justify-between items-center">
-                        <a href="dashboard.html" class="text-sm text-gray-600 hover:underline">sing in as user</a>
+                        <a href="home.html" class="text-sm text-gray-600 hover:underline">sing in as user</a>
                     </div>
                     <div class="flex justify-between items-center">
                         <a href="admindash.html" class="text-sm text-gray-600 hover:underline">sing in as admin</a>
